# FastAPI_PostgreSQL

./: docker-compose.yml  pyproject.toml
backend/: .env  app.py  config.py  crud.py  database.py  main.py  models.py  schema.py  test_app.py  test_main.py
backend/routers/: userInfo.py  users.py
db/: alembic.ini  docker-compose.yml  docker-compose.yml:Zone.Identifier
db/myAlembic/versions/: c13473f07dd6_create_user_table.py
frontend/: Dockerfile  detail.html  docker-compose.yml  index.html  package-lock.json  signup.html
